--- a/Views/Home/mostrar.cshtml
+++ b/Views/Home/mostrar.cshtml
@@ -1,4 +1,5 @@
 @model IEnumerable<Rino.Models.software>
+
   <!DOCTYPE html>
   <html>
 
@@ -35,6 +36,7 @@
           </table>
         </div>
       </div>
+     @ViewData["individual"].ToString()     
     </div>
   </body>
 
